--- a/jobApplication/templates/contact.html
+++ b/jobApplication/templates/contact.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+<!-- {% extends 'base.html' %} {% block content %}
 <h1 class="mt-4 mb-4 text-center">Contact Us</h1>
 <form method="post">
   {% csrf_token %}
@@ -23,3 +23,328 @@
   <button class="btn btn-secondary mb-4" type="submit">Submit</button>
 </form>
 {% endblock %}
+
+
+ -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title> Contact Us </title>
+     <style>
+         *{
+     padding: 0;
+     margin: 0;
+     box-sizing: border-box;
+ }
+ body{
+     background: #d0f0c0; 
+ }
+ body, input,textarea, a{
+     font-family: 'Roboto', sans-serif;
+ }
+ 
+ .main{
+     width: 100%;
+     height: 100vh;
+      background-color: #d0f0c0; 
+     background-position: center;
+     background-size: cover;
+ }
+ 
+ .navbar{
+     width: 1200px;
+     height: 20px;
+     margin: auto;
+ }
+ 
+ .icon{
+     width: 200px;
+     float: left;
+     height: 70px;
+ }
+ 
+ .logo{
+     color: #ff7200;
+     font-size: 35px;
+     font-family: Arial;
+     padding-left: 20px;
+     float: left;
+     padding-top: 10px;
+     margin-top: 5px
+ }
+ 
+ .menu{
+     width: 400px;
+     float: left;
+     height: 70px;
+ }
+ 
+ ul{
+     float: left;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+ }
+ 
+ ul li{
+     list-style: none;
+     margin-left: 62px;
+     margin-top: 27px;
+     font-size: 14px;
+ }
+ 
+ ul li a{
+     text-decoration: none;
+     color: #fff;
+     font-family: Arial;
+     font-weight: bold;
+     transition: 0.4s ease-in-out;
+ }
+ 
+ ul li a:hover{
+     color: #ff7200;
+ }
+ 
+ #section-wrapper{
+     width: 100%;
+     padding: 10px;
+ }
+ .box-wrapper{
+     position: relative;
+     display: table;
+     width:1100px;
+     margin:auto;
+     margin-top:35px;
+     border-radius: 30px;
+ }
+ .info-wrap{
+     width:40%;
+     height: 551px;
+     padding: 40px;
+     margin-left:-80px;
+     margin-top: 50px;
+     float: left;
+     display: block;
+     border-radius: 30px 0px 0px 30px;
+     background: linear-gradient(144deg, rgb(0, 0, 0) 0%, rgb(3, 2, 8) 49%);
+     color: #fff;
+ }
+ .info-title{
+     text-align: left;
+     font-size: 28px;
+     letter-spacing: 0.5px;
+ }
+ .info-sub-title{
+     font-size: 18px;
+     font-weight: 300;
+     margin-top: 17px;
+     letter-spacing: 0.5px;
+     line-height: 26px;
+ }
+ .info-details {
+     list-style: none;
+     margin: 60px 0px;
+ }
+ .info-details li {
+     margin-top: 25px;
+     font-size: 18px;
+     color: #fff;
+ }
+ .info-details li i {
+     background: #F44770;
+     padding: 12px;
+     border-radius: 50%;
+     margin-right: 5px;
+ }
+ .info-details li a {
+     color: #fff;
+     text-decoration: none;
+ }
+ .info-details li a:hover {
+     color: #F44770;
+ }
+ .social-icons {
+     list-style: none;
+     text-align: center;
+     margin: 60px;
+     color:white;
+     font-size: 30px;
+     padding-left: 14px;
+     padding-top: 5px;
+     transition: 0.3s ease;
+ }
+ 
+ .social-icons ion-icon:hover{
+     color: #ff7200;
+ }
+ 
+ .form-wrap{
+     width:65%;
+     float: right;
+     margin-top: 50px;
+     padding:40px 25px 35px 25px;
+     border-radius: 0px 30px 30px 0px;
+     background: #ecf0f3;
+ }
+ .form-title{
+     text-align: left;
+     margin-left: 23px;
+     font-size: 28px;
+     letter-spacing: 0.5px;
+ }
+ .form-fields{
+     display: table;
+     width: 100%;
+     padding: 15px 5px 5px 5px;
+ }
+ .form-fields input,
+ .form-fields textarea{
+     border: none;
+     outline:none;
+     background: none;
+     font-size: 18px;
+     color:#555;
+     padding: 20px 10px 20px 5px;
+     width:100%
+ }
+ .form-fields textarea{
+     height: 150px;
+     resize: none;
+ }
+ .form-group{
+     width: 46%;
+     float: left;
+     padding: 0px 30px;
+     margin: 14px 12px;
+     border-radius: 25px;
+     box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #ffffff;
+ }
+ .form-fields .form-group:last-child {
+     width: 96%;
+ }
+ .submit-button{
+     width: 96%;
+     height: 60px;
+     margin: 0px 12px;
+     border-radius: 30px;
+     font-size: 20px;;
+     font-weight: 700;
+     outline: none;
+     border:none;
+     cursor: pointer;
+     color:#fff;
+     text-align: center;
+     background: #F44770;
+     box-shadow: 3px 3px 8px #b1b1b1, -3px -3px 8px #ffffff;
+     transition: .5s;
+ }
+ .submit-button:hover{
+     background: #31279d;
+ }
+ 
+ 
+ /* Responsive css */
+ 
+ @media only screen and (max-width: 767px) {
+     .box-wrapper{
+         width: 100%;
+     }
+     .info-wrap,
+     .form-wrap{
+         width: 100%;
+         height: inherit;
+         float: none;  
+     }
+     .info-wrap{
+         border-radius: 30px 30px 0px 0px;
+     }
+     .form-wrap{
+         border-radius: 0px 0px 30px 30px;
+     }
+     .form-group{
+         width: 100%;
+         float: none;
+         margin: 25px 0px;
+     }
+     .form-fields .form-group:last-child, 
+     .submit-button{
+         width: 100%;
+     }
+     .submit-button{
+         margin: 10px 0px;
+     }
+    
+ }
+     </style>
+     
+ </head>
+ <body>
+    {% extends 'base.html' %} {% block content %}
+ 
+     <div class="main">
+         <div class="navbar">
+             <div class="icon">
+                 <h2 class="logo">forest apes</h2>
+             </div>
+             <div class="menu">
+                 <ul>
+                     <li><a href="home.html">HOME</a></li>
+                     <li><a href="first.html">ABOUT</a></li>
+                     <li><a href="#">SERVICE</a></li>
+                     <li><a href="contact.html">CONTACT</a></li>
+                 </ul>
+             </div>
+         </div>
+ 
+     <section id="section-wrapper">
+         <div class="box-wrapper">
+             <div class="info-wrap">
+                 <h2 class="info-title">Contact Information</h2>
+                 <h3 class="info-sub-title">Fill up the form and our Team will get back to you within 24 hours</h3>
+                 <ul class="info-details">
+                     <li>
+                         <i class="fas fa-phone-alt"></i>
+                         <span>Phone:</span> <a href="tel:+ 1235 2355 98">9809248428</a>
+                     </li>
+                     <li>
+                         <i class="fas fa-paper-plane"></i>
+                         <span>Email:</span> <a href="mailto:info@yoursite.com">shresthaupendra1234@gmail.com</a>
+                     </li>
+                     <li>
+                         <i class="fas fa-globe"></i>
+                         <span>Website:</span> <a href="#">yoursite.com</a>
+                     </li>
+                 </ul>
+                 <ul class="social-icons">
+                     <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                     <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                     <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                 </ul>
+             </div>
+             <div class="form-wrap">
+                 <form action="#" method="POST">
+                  {% csrf_token %}
+                     <h2 class="form-title">Send us a message</h2>
+                     <div class="form-fields">
+                         <div class="form-group">
+                             <input type="text" class="fname" placeholder=" Name" required />
+
+                         </div>
+                         <div class="form-group">
+                             <input type="email" class="email" placeholder="Mail" required>
+                         </div>
+                         <div class="form-group">
+                             <textarea name="message" id="" placeholder="Write your message" required></textarea>
+                         </div>
+                     </div>
+                     <input type="submit" value="Send Message" class="submit-button">
+                 </form>
+             </div>
+         </div>
+     </section>
+     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+ </body>
+ </html>
