--- a/jobApplication/templates/contact.html
+++ b/jobApplication/templates/contact.html
@@ -285,19 +285,6 @@
     {% extends 'base.html' %} {% block content %}
  
      <div class="main">
-         <div class="navbar">
-             <div class="icon">
-                 <h2 class="logo">forest apes</h2>
-             </div>
-             <div class="menu">
-                 <ul>
-                     <li><a href="home.html">HOME</a></li>
-                     <li><a href="first.html">ABOUT</a></li>
-                     <li><a href="#">SERVICE</a></li>
-                     <li><a href="contact.html">CONTACT</a></li>
-                 </ul>
-             </div>
-         </div>
  
      <section id="section-wrapper">
          <div class="box-wrapper">
@@ -325,8 +312,8 @@
                  </ul>
              </div>
              <div class="form-wrap">
-                 <form action="#" method="POST">
-                  {% csrf_token %}
+                 <form method="POST">
+                     {% csrf_token %}
                      <h2 class="form-title">Send us a message</h2>
                      <div class="form-fields">
                          <div class="form-group">
@@ -342,6 +329,7 @@
                      </div>
                      <input type="submit" value="Send Message" class="submit-button">
                  </form>
+                 {% endblock %}
              </div>
          </div>
      </section>
